--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     </head>
     <body>
         <div id="canvas"></div>
+        <div id="container">
+            <h1 class="banner">QUACK!</div>
+        </div>
     </body>
 </html>
