--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="index.js"></script>
+        <script type="module" src="index.mjs"></script>
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
