viewport resize handling

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
     <head>
         <script type="module" src="index.mjs"></script>
         <link rel="stylesheet" href="index.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div id="canvas"></div>
         <div id="container">
-            <h1 class="banner">QUACK!</div>
+            <h1 class="banner">QUACK!</h1>
+                <h2 class="banner">...quack.</h2>
         </div>
     </body>
 </html>
