--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
     <head>
         <script type="module" src="index.mjs"></script>
         <link rel="stylesheet" href="index.css">
+        <script type="module" src="modules/content.mjs"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div id="canvas"></div>
+        <div id="darkness"></div>
         <div id="container">
-            <h1 class="banner">QUACK!</h1>
-                <h2 class="banner">...quack.</h2>
+            <div id="button">V</div>
         </div>
     </body>
 </html>
