--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
         <div id="darkness"></div>
         <div id="container">
             <div id="button">V</div>
+            <div id="screen" class="screen">
+                <div id="innerscreen">
+                    <div id="screendarkness"></div>
+                    <div id="screencontent">
+                        <h1>Hi, I'm <span id="name">QUACK!</span></h1>
+                    </div>
+                    <div id="sTop"></div>
+                    <div id="sRight"></div>
+                    <div id="sBottom"></div>
+                    <div id="sLeft"></div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
