content and polish

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
                 <div id="innerscreen">
                     <div id="screendarkness"></div>
                     <div id="screencontent">
-                        <h1>Hi, I'm <span id="name">QUACK!</span></h1>
+                        <div class="text">Hello,</div>
+                        <div class="text">I'm Hendrik Vogel.</div>
+                        <div class="text">I hope you enjoy this small project.</div>
+                        <div class="text">sourcecode & more at</div>
+                        <a href="https://github.com/hendrikvgl" target="_blank"><img src="resources/github-mark.png" alt="github" class="github"></a>
                     </div>
                     <div id="sTop"></div>
                     <div id="sRight"></div>
