--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div id="canvas"></div>
         <div id="darkness"></div>
         <div id="container">
-            <div id="button">V</div>
+            <div id="button" class="button">V</div>
             <div id="screen" class="screen">
                 <div id="innerscreen">
                     <div id="screendarkness"></div>
