centered github logo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
                         <div class="text">I'm Hendrik Vogel.</div>
                         <div class="text">I hope you enjoy this small project.</div>
                         <div class="text">sourcecode & more at</div>
+                        <div class="center">
                         <a href="https://github.com/hendrikvgl" target="_blank"><img src="resources/github-mark.png" alt="github" class="github"></a>
+                        </div>
+                    </div>
                     </div>
                     <div id="sTop"></div>
                     <div id="sRight"></div>
